# evalforge-interview-ai

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  evalforge_environment.py  models.py  openenv.yaml  pyproject.toml
openenv_evalforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: __init__.py  app.py  evalforge_environment.py  requirements.txt
